# devgrow

./: Dockerfile  README.md  make_icon.py  pyproject.toml  setup.sh
devgrow/: cli.py  db.py  desktop.py  sm2.py  web.py
devgrow/static/: app.js  style.css
devgrow/templates/: base.html  dashboard.html  decisions.html  goals.html  learn.html  quiz.html  review.html  search.html  stats.html
