[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devgrow"
version = "0.2.0"
description = "Web app for developer self-improvement — learning log, spaced repetition, decision journal, XP"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "click>=8.1.0",
]

[project.optional-dependencies]
desktop = ["PySide6>=6.7"]

[project.scripts]
devgrow         = "devgrow.cli:main"
devgrow-desktop = "devgrow.desktop:main"

[tool.ruff]
line-length = 100
target-version = "py311"
